<resources>
    <string name="app_name">NewsApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="favorite">Favorite</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="add_favorite">Add Favorite</string>
</resources>