<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.AddFavorite">

    <TextView
        android:id="@+id/fav_select_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/add_favorite"
        android:textSize="40sp"
        android:textColor="@color/design_default_color_primary_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/checkBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/fav_select_title">

        <CheckBox
            android:id="@+id/checkboxBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="fav_add"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:text="@string/business" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxSports"
            android:onClick="fav_add"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:text="@string/sports" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxHealth"
            android:onClick="fav_add"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:text="@string/health" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxScience"
            android:onClick="fav_add"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:text="@string/science" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxEntertainment"
            android:onClick="fav_add"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:text="@string/entertainment" />



    </LinearLayout>

    <Button
        android:id="@+id/submit_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxLayout"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="submit"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/submit_fav"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="Clear Data"
        android:onClick="clearData"
        />

</androidx.constraintlayout.widget.ConstraintLayout>